--- a/secure/app/rori-stack-secure/pyproject.toml
+++ b/secure/app/rori-stack-secure/pyproject.toml
@@ -10,6 +10,9 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.9"
+fastapi = "^0.79.0"
+docker = "^5.0.3"
+uvicorn = "^0.18.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
