--- a/secure/docker-compose.yml
+++ b/secure/docker-compose.yml
@@ -7,3 +7,17 @@ services:
     tty: true
     volumes:
       - ./app:/src/app
+  
+  nginx:
+    image: nginx:alpine
+    depends_on:
+      - web
+    volumes:
+      - ./nginx/conf.d:/etc/nginx/conf.d
+    environment:
+      - VIRTUAL_HOST=$APP_URL
+
+networks:
+  default:
+    external: true
+    name: rori-stack
