--- a/secure/app/Dockerfile
+++ b/secure/app/Dockerfile
@@ -22,6 +22,18 @@ RUN poetry config virtualenvs.create true
 
 COPY /rori-stack-secure .
 
+# docker
+
+RUN apt-get update && apt-get install -y \
+    curl \
+    && rm -rf /var/lib/apt/lists/*
+
+ENV DOCKER_CLIENT_VERSION=1.12.3
+ENV DOCKER_API_VERSION=1.24
+RUN curl -fsSL https://get.docker.com/builds/Linux/x86_64/docker-${DOCKER_CLIENT_VERSION}.tgz \
+    | tar -xzC /usr/local/bin --strip=1 docker/docker
+
+# 
 RUN poetry install
 
 EXPOSE 8000
