--- a/secure/docker-compose.yml
+++ b/secure/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     tty: true
     volumes:
       - ./app:/src/app
+      - /var/run/docker.sock:/tmp/docker.sock:ro
   
   nginx:
     image: nginx:alpine
@@ -14,6 +15,7 @@ services:
       - web
     volumes:
       - ./nginx/conf.d:/etc/nginx/conf.d
+      - /var/run/docker.sock:/tmp/docker.sock:ro
     environment:
       - VIRTUAL_HOST=$APP_URL
 
