--- a/nginx-proxy/docker-compose.yml
+++ b/nginx-proxy/docker-compose.yml
@@ -4,7 +4,8 @@ services:
   nginx-proxy:
     image: jwilder/nginx-proxy:latest
     ports:
-      - '80:80'
+      # web
+      - 80:80
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
 
