--- a/ssh-server/docker-compose.yml
+++ b/ssh-server/docker-compose.yml
@@ -4,11 +4,12 @@ services:
   ssh:
     build: ./src
     tty: true
-    privileged: true
+    # privileged: true
     ports:
       - 22:22
     volumes:
       - ../share-volume/ssh-server:/ssh-server
+      - /var/run/docker.sock:/var/run/docker.sock
     environment:
       - VIRTUAL_HOST=$APP_URL
 
