--- a/ssh-server/src/Dockerfile
+++ b/ssh-server/src/Dockerfile
@@ -11,13 +11,20 @@ RUN sed 's@session\s*required\s*pam_loginuid.so@session optional pam_loginuid.so
 ENV NOTVISIBLE "in users profile"
 RUN echo "export VISIBLE=now" >> /etc/profile
 
+# install docker
+RUN apt-get update && apt-get install -y \
+    curl \
+    && rm -rf /var/lib/apt/lists/*
+
+ENV DOCKER_CLIENT_VERSION=1.12.3
+ENV DOCKER_API_VERSION=1.24
+RUN curl -fsSL https://get.docker.com/builds/Linux/x86_64/docker-${DOCKER_CLIENT_VERSION}.tgz \
+    | tar -xzC /usr/local/bin --strip=1 docker/docker
+
+# sudo install
+RUN apt update && \
+    apt install -y sudo
+
 EXPOSE 22
+
 CMD ["/usr/sbin/sshd", "-D"]
-
-# WORKDIR /ssh-server
-
-# Register public key
-# ADD id_rsa.pub /root/.ssh/
-# RUN mv /root/.ssh/id_rsa.pub /root/.ssh/authorized_keys && \
-#     chmod 700 /root/.ssh && \
-#     chmod 600 /root/.ssh/authorized_keys
