--- a/ec3/Dockerfile
+++ b/ec3/Dockerfile
@@ -1,16 +1,14 @@
-FROM ubuntu:18.04
+FROM ubuntu:20.04
 
-# setup requirements packages
-RUN apt update -y && \
-    apt install -y init && \
-    apt install -y systemd
+RUN apt-get update
+RUN DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends init
 
-# 日本語対応
-# ENV LANG C.UTF-8
+ENV LANG=C.UTF-8
 
-# vim & curl
+# vim , curl & sudo
 RUN apt update -y && \
     apt install curl -y && \
-    apt install vim -y
+    apt install vim -y && \
+    apt install sudo -y
 
-CMD [ "/sbin/init", "&&", "service", "ssh", "start" ]
+ENTRYPOINT ["/sbin/init"]
