--- a/nginx-proxy/docker-compose.yml
+++ b/nginx-proxy/docker-compose.yml
@@ -2,14 +2,13 @@ version: '3'
 
 services:
   nginx-proxy:
-    image: jwilder/nginx-proxy:latest
+    build: ./
     ports:
       # web
       - 80:80
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
       - ./html/custom_pages:/etc/nginx/html/custom_pages
-      # - ./conf.d/default.conf:/etc/nginx/conf.d/default.conf
 
 networks:
   default:
