--- a/nginx-proxy/Dockerfile
+++ b/nginx-proxy/Dockerfile
@@ -1,5 +1,5 @@
 FROM jwilder/nginx-proxy:latest
 
-# COPY ./nginx.tmpl /app/nginx.tmpl
-COPY ./html/custom_pages/503.html /usr/share/nginx/html/503.html
-COPY ./html/custom_pages/502.html /usr/share/nginx/html/502.html
+COPY ./nginx.tmpl /app/nginx.tmpl
+COPY ./html/503.html /usr/share/nginx/html/503.html
+COPY ./html/502.html /usr/share/nginx/html/502.html
